[gd_scene load_steps=4 format=3 uid="uid://ckwtxl6u6uffd"]

[ext_resource type="Script" path="res://inventory/inventory_interface.gd" id="1_don2b"]
[ext_resource type="PackedScene" uid="uid://bk0on6yv4u3fm" path="res://inventory/inventory.tscn" id="2_hdtfk"]
[ext_resource type="PackedScene" uid="uid://n06lx41e8d6t" path="res://inventory/slot.tscn" id="3_7qjho"]

[node name="InventoryInterface" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_don2b")

[node name="PlayerInventory" parent="." instance=ExtResource("2_hdtfk")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipInventory" parent="." instance=ExtResource("2_hdtfk")]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="." instance=ExtResource("2_hdtfk")]
visible = false
layout_mode = 0
offset_left = 685.0
offset_top = 215.0
offset_right = 725.0
offset_bottom = 255.0

[node name="GrabbedSlot" parent="." instance=ExtResource("3_7qjho")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
